; don't copy target to _build

(dirs :standard \ "target" "vendor")

; creates the rust library if any rust file changes

(rule
 (targets librand.a dllrand.so)
 (deps
  (source_tree .))
 (action
  (progn
   (run cargo build --release)
   (run
    sh
    -c
    "mv target/release/librand.so ./dllrand.so 2> /dev/null || mv target/release/librand.dylib ./dllrand.so 2> /dev/null || touch dllrand.so")
   (run cp target/release/librand.a .))))

; the FFI OCaml lib

(library
 (name rand)
 (public_name randoml.rand)
 (foreign_archives rand))
